# MBPS224

./: .gitignore  .gitmodules  README.md
Firmware/: MBPS224.atsln
Firmware/MainBoard/: MainBoard.cproj  doxyfile  main.c
Firmware/MainBoard/Hardware/include/: Audio.h  Buttons.h  Hardware.h  KS0108LCD.h  TDA8551.h
Firmware/MainBoard/Hardware/source/: Buttons.c  Hardware.c
Firmware/MainBoard/HighLevel/include/: Menu.h  PSDataService.h  PSMController.h  Peripherals.h  Settings.h  Tasks.h  ThermalController.h
Firmware/MainBoard/HighLevel/source/: Menu.c  PSDataService.c  PSMController.c  Peripherals.c  Settings.c  Tasks.c  ThermalController.c
Firmware/MainBoard/Resources/Bitmaps/: SplashScreen1.xcf
Firmware/MainBoard/Resources/Bitmaps/include/: Bitmaps.h
Firmware/MainBoard/Resources/Bitmaps/source/: AboutIcon.c  GeneralSettingsIcon.c  PCConnectionImage.c  PSsettingsIcon.c  SettingsIcon.c  SplashScreen1.c  SplashScreen2.c
Firmware/MainBoard/Resources/Fonts/include/: Fonts.h
Firmware/MainBoard/Resources/Fonts/source/: MicrosoftSansSerif11Bold.c  MicrosoftSansSerif7.c  MicrosoftSansSerif8Bold.c  MicrosoftSansSerif9.c
Firmware/MainBoard/Resources/Rings/include/: Rings.h
Firmware/MainBoard/Resources/Rings/source/: Intro.c
Firmware/MainBoard/include/: main.h
Firmware/PowerSupplyModule/: PowerSupplyModule.cproj  main.c
Firmware/PowerSupplyModule/Hardware/include/: Hardware.h  OWIMaster.h  Regulator.h
Firmware/PowerSupplyModule/Hardware/source/: Hardware.c  Regulator.c
Firmware/PowerSupplyModule/HighLevel/include/: MBController.h  Multimeter.h  Peripherals.h  Tasks.h
Firmware/PowerSupplyModule/HighLevel/source/: MBController.c  Multimeter.c  Peripherals.c  Tasks.c
Firmware/PowerSupplyModule/include/: main.h
Firmware/main_board/: main.c
Firmware/main_board/hardware/include/: Audio.h  Hardware.h  OWIMaster.h  TDA8551.h
Firmware/main_board/hardware/source/: Buttons.c
Firmware/main_board/high_level/include/: ThermalController.h
Firmware/main_board/high_level/source/: ThermalController.c
Firmware/main_board/resources/fonts/include/: Fonts.h
Firmware/power_supply_module/: PowerSupplyModule.cproj  Voltage.ods
Firmware/power_supply_module/hardware/include/: Hardware.h  Regulator.h
Firmware/power_supply_module/high_level/source/: Multimeter.c
Firmware/unit_tests/: CMakeLists.txt
Firmware/unit_tests/tests/Common/utils/: utils_test.cpp
firmware/: CMakeLists.txt  MBPS224.avrsln  build.bat
firmware/main_board/: CmakeLists.txt  MainBoard.cproj
firmware/main_board/hardware/include/: Buttons.h  Hardware.h
firmware/main_board/hardware/source/: Hardware.c
firmware/main_board/high_level/include/: PSDataService.h  PSMController.h  Settings.h  Tasks.h
firmware/main_board/high_level/source/: PSDataService.c  PSMController.c  Peripherals.c  Tasks.c
firmware/main_board/include/: main.h
firmware/main_board/resources/bitmaps/: SplashScreen2.xcf
firmware/main_board/resources/bitmaps/include/: Bitmaps.h
firmware/main_board/resources/bitmaps/source/: AboutIcon.c  GeneralSettingsIcon.c  PCConnectionImage.c  PSsettingsIcon.c  SettingsIcon.c  SplashScreen1.c  SplashScreen2.c
firmware/main_board/resources/fonts/source/: MicrosoftSansSerif7.c  MicrosoftSansSerif8Bold.c
firmware/main_board/resources/rings/include/: Rings.h
firmware/main_board/tests/: CMakeLists.txt  main.cpp
firmware/power_supply_module/: PowerSupplyModule.cproj  doxyfile  main.c
firmware/power_supply_module/hardware/source/: Hardware.c  Regulator.c
firmware/power_supply_module/high_level/include/: MBController.h  Multimeter.h
firmware/power_supply_module/high_level/source/: Tasks.c
firmware/power_supply_module/include/: main.h
firmware/unit_tests/: .cproject  .project  CMakeLists.txt  main.cpp
firmware/unit_tests/mocks/: debug_mock.cpp  debug_mock.h
firmware/unit_tests/mocks/avr/: interrupt.h  io.h  pgmspace.h
firmware/unit_tests/tests/avr/drivers/: i2c_master_test.cpp
firmware/unit_tests/tests/common/utils/: utils_test.cpp
firmware/unit_tests/utils/cmake/: Utils.cmake  script.py
